SubBt/force-app/main/default/objects/Walk_Through_Line_Items__c/Walk_Through_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Walk Through Line Item</label>
    <nameField>
        <displayFormat>WTL# {000000}</displayFormat>
        <label>Walk Through Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walk Through Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>