SubBt/force-app/main/default/objects/Walk_Through_Line_Items__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>