SubBt/force-app/main/default/objects/Walk_Through_Line_Items__c/fields/Field_For_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_For_Work_Order__c</fullName>
    <label>Work Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>