SubBt/force-app/main/default/objects/Walk_Through_Line_Items__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bedroom1</fullName>
            </value>
            <value>
                <fullName>Bedroom2</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>